* CHANGES IN dplR VERSION 1.6.4

File: sea.R
-----------
- Updated sea() to return bootstrapped CIs.

File: treeMean.R
-------------
- Made a new function to calculate the mean value of each tree when there are 
  multiple cores.

File: NAMESPACE
-------------
- Added treeMean function.

* CHANGES IN dplR VERSION 1.6.3

File: crn.plot.R
-------------

- Added default x and y labels to plot. It would be better to use match.call()
  to check to see if xlab and ylab were passed in as dots but it is a very 
  cumbersome bit of code for only a little difference to the user.

File: spag.plot.R
--------------

- Change to ylim in the plotting area.

File: CITATION
--------------

- Removed a piece of obsolete code which raised a NOTE in recent R-devel
  when checking --as-cran.

File: DESCRIPTION
-----------------

- A new field, MailingList, shows the address of the web interface
  to the dplR-help mailing list hosted on Google Groups.
- New Imported packages: Matrix, matrixStats, R.utils.
- New Suggested package: testthat. Unit tests are now done with testthat
  instead of RUnit.
- RUnit is no longer Suggested.
- Updated version requirement: gmp (>= 0.5-5).  Earlier versions of gmp do
  not export is.bigq() which is required by dplR.  The previous version
  requirement (>= 0.5-2) was a mistake.
- Updated version requirement: R (>= 2.15.2).  For some reason, R
  CMD check does not play nice with testthat on earlier versions of R.
- Removed one of the URLs in the URL field. BDR sent and email saying that 
  having two URLs was breaking R and that we should put a comma in betwixt
  them. But the comma is problematic as it is a valid part of some URLs.
  We decided the better part of valor was to keep only one URL and not fight
  this particular battle.

File: NAMESPACE
---------------

- Importing captureOutput() from R.utils.
- Importing package Matrix.
- Importing various functions from matrixStats.